# turtlebot

./: .gitignore  LICENSE  README.md  positions.txt  positions_pan_tilt.txt  positions_pan_tilt_1.txt  predict-svm.py
.catkin_tools/profiles/default/: devel_collisions.txt
devel/: .catkin  _setup_util.py  env.sh  setup.bash  setup.sh  setup.zsh
devel/.private/axis_camera/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/.private/axis_camera/include/axis_camera/: Axis.h  PTZConfig.h
devel/.private/cam_tracker/: .catkin  .rosinstall  setup.sh
devel/.private/cam_tracker/include/cam_tracker/: ChangeTrackingMode.h  ChangeTrackingModeRequest.h  ChangeTrackingModeResponse.h
devel/.private/catkin_tools_prebuild/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/.private/demo_teleop/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/.private/turtleTrack/: .catkin  .rosinstall  _setup_util.py  setup.sh
devel/include/axis_camera/: Axis.h  PTZConfig.h
devel/include/cam_tracker/: ChangeTrackingMode.h  ChangeTrackingModeRequest.h  ChangeTrackingModeResponse.h
devel/include/demo_teleop/: SafeDroneTeleopConfig.h
devel/share/axis_camera/cmake/: axis_camera-msg-extras.cmake  axis_camera-msg-paths.cmake  axis_cameraConfig-version.cmake  axis_cameraConfig.cmake
devel/share/cam_tracker/cmake/: cam_tracker-msg-extras.cmake  cam_tracker-msg-paths.cmake  cam_trackerConfig-version.cmake  cam_trackerConfig.cmake
devel/share/catkin_tools_prebuild/cmake/: catkin_tools_prebuildConfig-version.cmake  catkin_tools_prebuildConfig.cmake
devel/share/demo_teleop/cmake/: demo_teleopConfig-version.cmake  demo_teleopConfig.cmake
devel/share/gennodejs/ros/axis_camera/: _index.js
devel/share/turtleTrack/cmake/: turtleTrackConfig-version.cmake  turtleTrackConfig.cmake
logs/axis_camera/: build.make.000.log.stderr
logs/demo_teleop/: build.make.000.log.stderr
src/axis_camera/: detect.py
src/axis_camera/launch/: axis.launch
src/axis_camera/nodes/: axis_ptz.py  detect.py
src/cam_tracker/: CMakeLists.txt  package.xml
src/cam_tracker/launch/: default.launch  sampler.launch
src/cam_tracker/models/: model-X.pkl  model-Y.pkl  scaler.pkl
src/cam_tracker/msg/: ArenaPositions.msg  PanTilt.msg  PanTilts.msg
src/cam_tracker/scripts/: analyse.py  detect.py  localize.py  sampler.py  svm.py  tracker.py
src/cam_tracker/src/: share.cpp
src/demo-teleop/scripts/: key_teleop.py
src/turtleTrack/: CMakeLists.txt
src/turtle_track/: CMakeLists.txt  package.xml
src/turtle_track/scripts/: nav_to_goal.py  nav_to_goalBO.py
(+35 files in other folders)
